tests/integration/fail/comparison_ge_string_string.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::NAryPrimopTypeError'
"a" > "b"